# cpp_one_assignments

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  Vagrantfile
.github/workflows/: cmake_build.yml
algorithms/: CMakeLists.txt  README.md
algorithms/include/: algo.hpp  types.hpp
algorithms/src/: main.cpp
algorithms/test/: algorithms_test.cpp
battleship/: CMakeLists.txt  README.md  battleship_mc.sln  battleship_mc.vcxproj  battleship_mc.vcxproj.filters
battleship/include/: board.h  example_solver.h  guesser.h  solver.h  types.h  user_solver.h
battleship/src/: board.cpp  example_solver.cpp  guesser.cpp  main.cpp  solver.cpp  user_solver.cpp
battleship/test/: battleship_test.cpp
blackjack/include/: deck.hpp
cafe/: CMakeLists.txt
cafe/src/: cafe.h  cart.h  item.h  register.h  utils.h
cafe/test/: cafe_test.cpp
test/: algorithms_test.cpp
